<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/batteryStatusText"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/logScroll"
        app:layout_constraintTop_toBottomOf="@+id/batteryStatusText">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NotificationURLText" />

            <EditText
                android:id="@+id/notificationURLText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/URLNotificationHint"
                android:inputType="textUri" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NotificationIntervalSeconds" />

            <EditText
                android:id="@+id/notificationIntervalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/NotificationIntervalHint"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NotificationKey" />

            <EditText
                android:id="@+id/notificationKeyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/URLNotificationHint" />

        </TableRow>

    </TableLayout>


    <ScrollView
        android:id="@+id/logScroll"
        android:layout_width="411dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/pauseLogButton"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/logText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cursorVisible="true"
                android:editable="false"
                android:text="TextView"
                android:textIsSelectable="true" />
        </LinearLayout>

    </ScrollView>

    <ToggleButton
        android:id="@+id/pauseLogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Detener traza"
        android:textOff="Activar traza"
        android:textOn="Detener traza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logScroll" />


</androidx.constraintlayout.widget.ConstraintLayout>